@@ -786,7 +786,7 @@
 # not always work. If it does work, an OS or tool can be launched
 # by clicking it with the computer's mouse. Note that this feature
 # is mutually exclusive with the "enable_touch" feature and if both
-# are active, the most recently read one of the two takes precedence.
+# settinga are active, the "enable_mouse" token will take precedence.
 #
 # Inactive when commented out (Does not enable mouse support)
 #
@@ -798,8 +798,8 @@
 # may not always work. If it does work, an OS or tool can be launched by
 # touching it. In a submenu, touching anywhere launches the current item
 # selected. There is currently no way to select a specific submenu item.
-# This option is mutually exclusive with the "enable_mouse" feature. The
-# most recently read one takes precedence when both features are active.
+# This option is mutually exclusive with the "enable_mouse" feature and
+# the "enable_mouse" setting will take precedence when both are active.
 #
 # Inactive when commented out (Does not enable touch screen support)
 #
